# korean-tax-accounting-ax-benchmark

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  ROADMAP.md  pyproject.toml
config/: leaderboard-pins-authority-rag.json  models.yaml  sources.md
data/: README.md  sample-questions-v0.1.jsonl
docs/: ARCHITECTURE.md  DOMAIN.md  PRD.md  benchmark-design-principles.md  benchmark-schema.md  data-strategy.md  m4-public-sample-scope.md  m4-selfreview-round1-2026-06-12.md  m4-tech-report-blog.md  m4-tech-report-en.md  m4-tech-report-outline.md  m4-tech-report.md  positioning.md  question-blueprint.md  roadmap-gap-2026-06-18-post-n1.md  roadmap-gap-2026-06-18.md  rubric-v0.1.md  source-map.md  submission-guide.md
docs/adr/: 0001-vendor-not-import-taxagent.md  README.md  (+11 more)
leaderboard/: README.md  jsconfig.json  next.config.mjs  package-lock.json  package.json
phases/: index.json
playbooks/: PLAYBOOK_TEMPLATE.md  README.md  question-authoring.md
scripts/: analyze_results.py  build_leaderboard_data.py  deploy_leaderboard.sh  export_public_set.py  hash_question.py  heal_results.py  insert_canary.py  make_report.py  package_release.py  regrade_results.py  run_eval.py  smoke_judge.py  smoke_model.py  smoke_rag.py  validate_questions.py  variance_run.py
tests/: test_agent.py  test_aggregate.py  test_claude_cli.py  test_code_grader.py  test_codex_cli.py  test_gemini_cli.py  test_insert_canary.py  test_judge_hardening.py  test_loader.py  test_package_release.py  test_prompts.py  test_registry.py  test_report.py  test_runner.py  test_schema.py  test_stats.py
(+97 files in other folders)
