[project]
name = "ktaxbench"
version = "0.1.0"
description = "K-TaxBench evaluation harness — 한국 회계·세무 AI 벤치마크 실행기"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
# M3(Step 8)에서 멀티프로바이더 확장 시 설치: uv sync --extra providers
providers = [
    "anthropic>=0.40",
    "openai>=1.40",
    "google-genai>=0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ktaxbench"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
